@@ -24,3 +24,7 @@ Merged changes:
 7233							: graph not stacked by default.
 7238							: reverting switched files
 7240							: fonts with non-ascii names
+7242							: switched files only in cfm dialog
+7243							: Ctrl+Shift+Wheel and alpha value in TortoiseIDiff
+7244							: fix debug build
+7245							: UI friendly file titles
