@@ -1,3 +1,8 @@
+- NEW: Allow changing the alpha value in overlapped mode in TortoiseIDiff
+       to be changed with Ctrl+Shift+Wheel. (Stefan)
+- CHG: Switched files are only shown in the check-for-modifications
+       dialog and not in e.g. the commit/revert/add dialog if they're
+       not modified. (Stefan)
 - BUG: The header in TortoiseBlame was shown in the wrong font in translated
        versions. (Kazutoshi Satoda)
 - BUG: The state of the "Floppy drives" checkbox was not set correctly
@@ -11,6 +16,7 @@
        was switched. (Ivan Gerasimov)
 - BUG: Selecting fonts with non-ascii names didn't work in the
        scintilla edit control. (Kazutoshi Satoda)
+- BUG: The file titles were not always un-escaped. (Stefan)
 
 Version 1.4.0RC1
 - NEW: Command line param /bugid to prefill the bug ID
